
syntax = "proto3";
package com;

message StringArray
{
     repeated string DataArray = 1;
}

message Int32Array
{
     repeated int32 DataArray = 1;
}

message Int64Array
{
     repeated int64 DataArray = 1;
}

message StringData
{
     string Data = 1;
}

message Int32Data
{
     int32 Data = 1;
}

message Int64Data
{
     int64 Data = 1;
}

message floatData
{
     float Data = 1;
}

message DoubleData
{
     double Data = 1;
}

message StringMap
{
     map<string, string> Data = 1;
}

message Rpc
{
     message Request
     {
          int64 UserId = 1;
          uint32 RpcId = 2;
          int32 MethodId = 3;
          int64 SocketId = 4;
          bytes MessageData = 5;
     }
     message Response
     {
          int32 Code = 1;
          uint32 UserId = 2;
          int32 RpcId = 3;
          int32 MethodId = 5;
          bytes MessageData = 4;
     }
     message ReqHead
     {

     }
     message RespHead
     {

     }
}